# chess-board

./: README.md  chess_board.ipynb  pyproject.toml  test-color.ipynb
