[tool.poetry]
name = "chess-board"
version = "0.1.0"
description = ""
authors = ["renadalkhlafat <renadsalem8888@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.21.3"
matplotlib = "^3.4.3"
jupyterlab = "^3.2.1"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
